@@ -1,5 +1,8 @@
 2004-10-25  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (logview_set_window_title): Extract the window naming
+	code in its own function.
+
 	* logview-search.c (logview_tree_model_search_iter_foreach):
 	Correct display problem at startup.
 
